:lambda-pull: https://github.com/elastic/apm-aws-lambda/pull/

////
[float]
[[lambda-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
- Cool new feature: {lambda-pull}2526[#2526]

[float]
===== Bug fixes
////

[float]
[[lambda-unreleased]]
=== Unreleased

https://github.com/elastic/apm-aws-lambda/compare/v1.2.0...main[View commits]

[float]
===== Features
- Create proxy transaction with error results if not reported by agent {lambda-pull}315[315]

[float]
[[lambda-1.2.0]]
=== 1.2.0 - 2022/11/01

[float]
===== Features
- Parse and log APM Server error responses, and backoff on critical errors {lambda-pull}281[281]
- Disable CGO to prevent libc/ABI compatibility issues {lambda-pull}292[292]
- Deprecate `ELASTIC_APM_DATA_RECEIVER_TIMEOUT_SECONDS` in favour of `ELASTIC_APM_DATA_RECEIVER_TIMEOUT` {lambda-pull}294[294]
- Log shutdown reason on exit {lambda-pull}297[297]
- Add support for collecting and shipping function logs to APM Server {lambda-pull}303[303]
- Batch data collected from lambda logs API before sending to APM Server {lambda-pull}314[314]

[float]
===== Bug fixes
- Fix possible data corruption while processing multiple log events {lambda-pull}309[309]

[float]
[[lambda-1.1.0]]
=== 1.1.0 - 2022/08/24

https://github.com/elastic/apm-aws-lambda/compare/v1.0.2...v1.1.0[View commits]


[float]
==== Features
- Added support for Secret Manager {lambda-pull}208[208]
- Added support for Lambda platform metrics {lambda-pull}202[202]
- Migrated to AWS SDK for Go v2 {lambda-pull}232[232]
- Make buffer size for agent data configurable {lambda-pull}262[262]
- Add support for reproducible builds {lambda-pull}237[237]
- Improve extension client error messages {lambda-pull}259[259]

[float]
==== Bug fixes
- Log a warning when authentication with APM Server fails {lambda-pull}228[228]
- Handle http.ErrServerClosed correctly {lambda-pull}234[234]
- Handle main loop errors correctly {lambda-pull}252[252]